K3S/tools/litellm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: litellm
  name: litellm
  namespace: litellm
  annotations:
    configmap.reloader.stakater.com/reload: "litellm-config"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm:latest
          imagePullPolicy: IfNotPresent
          args: ["--config", "/app/config.yaml", "--port", "4000"]
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: litellm-config
              mountPath: /app/config.yaml
              subPath: config.yaml
      volumes:
        - name: litellm-config
          configMap:
            name: litellm-config
