K3S/tools/litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: litellm
  name: litellm-svc
  namespace: litellm
spec:
  type: ClusterIP
  selector:
    app: litellm
  ports:
    - port: 4000
